proc-macros/tests/ui/incorrect/rpc/rpc_empty.stderr
error: RPC cannot be empty
 --> $DIR/rpc_empty.rs:5:1
  |
5 | pub trait Empty {}
  | ^^^^^^^^^^^^^^^^^^
