proc-macros/tests/ui/incorrect/rpc/rpc_empty.rs
use jsonrpsee::proc_macros::rpc;

// Empty RPC is forbidden.
#[rpc(client, server)]
pub trait Empty {}

fn main() {}
